--- a/Part3/phonebook-back&front/package.json
+++ b/Part3/phonebook-back&front/package.json
@@ -6,7 +6,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
-    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../../Part2/phonebook  && npm run build && @powershell Copy-Item dist -Recurse ../../Part3/phonebook-backend",
+    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../phonebook-front  && npm run build && @powershell Copy-Item dist -Recurse ../phonebook-back&front",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs"
