--- a/Part3/phonebook-backend/package.json
+++ b/Part3/phonebook-backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch index.js",
     "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../phonebook-front  && npm run build && @powershell Copy-Item dist -Recurse ../phonebook-backend",
@@ -22,6 +23,10 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@flydotio/dockerfile": "^0.7.10"
+    "@eslint/js": "^9.25.1",
+    "@flydotio/dockerfile": "^0.7.10",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "eslint": "^9.25.1",
+    "globals": "^16.0.0"
   }
 }
