--- a/Part4/bloglist/package.json
+++ b/Part4/bloglist/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.0"
@@ -7,12 +8,11 @@
   "name": "bloglist",
   "version": "1.0.0",
   "description": "short list of blogs",
-  "main": "app.js",
-  "devDependencies": {},
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "node --watch app.js"
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   },
   "keywords": [
     "express",
