--- a/Part4/bloglist/package.json
+++ b/Part4/bloglist/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "test": "cross-env NODE_ENV=test node --test --test-concurrency=1",
-    "dev": "cross-env NODE_ENV=development node --watch index.js"
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
+    "start:test": "cross-env NODE_ENV=test node index.js"
   },
   "keywords": [
     "express",
